Layout issue with large Top Facts

--- a/core/public/stylesheets/landing.less
+++ b/core/public/stylesheets/landing.less
@@ -86,6 +86,7 @@
   #top-facts { 
     ul li { 
       padding-bottom: 1em;
+      min-height: 60px;
       &:not(:last-child) { 
         border-bottom: 1px solid #dbdbdb;
       }
@@ -93,6 +94,8 @@
         border-top: 1px solid #ffffff;
       }
       .wheel { 
+        width: 0px;
+        height: 0px;
         float: left;
       }
       header { 
